# monopoly

./: monopoly.cabal
Game/: Monopoly.hs
